--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -86,6 +86,15 @@
   </div>
   <br>
   <div class="content">
+    <a th:href="@{'/odpowiedz/nowaodpowiedz?post_id='+${post.id}}" style="text-align:right;">Dodaj komentarz</a>
+
+
+    <form action="http://www.localhost:8080/api/odpowiedz/dodajOdpowiedz" style="color:white;" method="post">
+      <input style="display:none;" type="text" name="post_id" th:value="${post.id}"/>
+      <label>Tresc</label> <input type="text" name="tresc" size="50"/>
+      <input type="submit" value="Dodaj" />
+    </form>
+
     <div class="post">
       <div class="lewo">
         Profil uzytkownika <text th:text="${post.zalozonePrzez}"></text>
