--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -11,8 +11,7 @@
 .header{
 	width: 1300px;
 	height: 300px;
-	background-color: wheat;
-	opacity: 0.055;
+	background-color: #0f1a323d;
 	margin-bottom: 20px;
 	margin: auto;
 }
