--- a/src/main/resources/templates/nowy-post.html
+++ b/src/main/resources/templates/nowy-post.html
@@ -15,7 +15,7 @@
   <br>
   <div class="content">
     <form action="http://www.localhost:8080/api/post/dodajPost" style="color:white;" method="post">
-      <input style="display:none;" type="text" name="dzial_id" th:value="${dzial_id}"/>
+      <input style="display:none;" type="text" name="dzialId" th:value="${dzialId}"/>
       <label>Nawa tematu</label> <input type="text" name="nazwa" />
       <br>
       <label>Tresc</label> <input type="text" name="tresc" size="50"/>
