--- a/src/main/resources/templates/zarejestruj.html
+++ b/src/main/resources/templates/zarejestruj.html
@@ -43,7 +43,7 @@
   <div class="tytul">FORMULARZ REJESTRACYJNY</div>
 
 
-  <form action="http://www.localhost:8080/api/uzytkownik/zarejestruj" class="zarejestruj" method="post">
+  <form action="/api/uzytkownik/zarejestruj" class="zarejestruj" method="post">
     <!--  <input style="display:none;" type="text" name="dzial_id" th:value="${nick}"/>-->
     <label class="label">nazwa</label> <input type="text" name="nazwa"/>
     <br>
